# dataAI

./: .env  .gitignore  .python-version  README.md  Testování_Janko.docx  docker-compose.yml  ping_db.py  pyproject.toml  run.sh
backend/: Dockerfile  dependencies.py  main.py  requirements.txt  session_context.py
backend/api/api_v1/: routers.py
backend/api/api_v1/endpoints/: db_endpoints.py  generic_endpoints.py  llm_endpoints.py
backend/config/: __init__.py
backend/connectors/: odbc.ini  odbc_mac.ini  odbcinst.ini
backend/helpers/: __init__.py  procedure_manager.py  sql_procedures_plugin.py
backend/schemas/: db_schemas.py  llm_schemas.py
backend/sql_procedures/: procedure_list.json
backend/sql_procedures/definitions/: train.sql
backend/utils/: charts.py  formatting_utils.py
frontend/: Dockerfile  chat.php  index.php
frontend/components/: chat.php  head.php  header.php  sidebar.php
frontend/js/: script.js
frontend/styles/: style.css
scripts/: setup.sh  venv.sh
