[project]
name = "jrd-poc-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Jan Holota",email = "jan.holota@cod8.io"},
    {name = "Petr Cizek",email = "petr.cizek@cod8.io"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "openai (>=1.64.0,<2.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "semantic-kernel (>=1.21.3,<2.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"